--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
+
 .App {
   text-align: center;
   max-width: 600px;
-  margin: 0 auto;
-  border: 2px black;
+  margin: 20px auto;
+  border: 2px solid black;
+  padding: 20px 0px
   
 }
 
