--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 
 .App {
   text-align: center;
-  max-width: 900px;
-  margin: 20px auto;
   
-  padding: 20px 0px
+  margin: 0 auto;
+  
+  padding: 20px 0px;
+  background-color: ;
+  border-radius: 6px;
   
 }
 
