--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   text-align: center;
   background-color: black;
   margin: 0 auto;
-  
+  color: white;
   padding: 0px ;
  
   border-radius: 6px;
