changed with and white lines

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,15 @@
 
 .App {
-  text-align: center;
+  
   background-color: black;
-  margin: 0 auto;
-  color: white;
-  padding: 0px ;
- 
-  border-radius: 6px;
   
 }
 
+.Inside{
+  text-align: center;
+  margin: 0 auto;
+  color: white;
+  padding: 0px ;
+  border-radius: 6px;
+ max-width: 900px;
+}
