--- a/src/Page.css
+++ b/src/Page.css
@@ -83,7 +83,7 @@ hr{
   
 }
 
-@media  all and (min-width: 400px) and (max-width:768px){
+@media  all and (min-width: 400px) {
 
   img{
     height:200px;
@@ -91,7 +91,7 @@ hr{
   }
   iframe{
     height:450px;
-    width:397px;
+    width: 390px;;
     
   }
   .First{
@@ -107,6 +107,15 @@ hr{
   }
   .Dictionary{
     float: unset;
+    position: relative;
+    right:15px
+  
+  }
+  .DictionaryInfo{
+    padding-top:20px
+  }
+  .WeatherInfo{
+    padding-top: 20px
   }
   
 }
